# s3-bidirectional-crr-example

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
s3_bi_crr/: __init__.py  bucket_stack.py  crr_stack.py  s3_crr_stack.py  shared.py
tests/: test_stack_synth.py
tests/__snapshots__/test_stack_synth/: test_bucket_stack_synthesizes_properly.json  test_crr_stack_synthesizes_properly.json
